tests/snapshots/scanner_tests__indentation__multiple_dedents.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Identifier(
        "a",
    ),
    Colon,
    Newline,
    Indent,
    Identifier(
        "b",
    ),
    Colon,
    Newline,
    Indent,
    Identifier(
        "c",
    ),
    Colon,
    Newline,
    Dedent,
    Identifier(
        "d",
    ),
    Colon,
    Dedent,
    Eof,
]
