tests/snapshots/scanner_tests__indentation__simple_indent.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Identifier(
        "key",
    ),
    Colon,
    Newline,
    Indent,
    Identifier(
        "value",
    ),
    Dedent,
    Eof,
]
